@@ -11,6 +11,13 @@
 			"--no-daemon" rather than "daemon=no"
 		- (nmd_print_usage): Fix script path in usage message
 
+2005-05-14  Dan Williams  <dcbw@redhat.com>
+
+	* panel-applet/NMWirelessAppletOtherNetworkDialog.c
+	  info-daemon/NetworkManagerInfoPassphraseDialog.c
+		- (update_button_cb): Make sure the OK button is enabled when it should be, fixes
+			problem where it never enabled for ASCII Key and Hex Key types
+
 2005-05-05  Dan Williams  <dcbw@redhat.com>
 
 	* src/backends/NetworkManagerRedHat.c
